# gtkdbgp

./: .cvsignore  .gitignore  AUTHORS  Changelog  LICENSE  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.in  gtkdbgp.glade  gtkdbgp.gladep  gtkdbgp.xml  gtkxdebug.glade  gtkxdebug.gladep  mkinstalldirs
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  globals.h  interface.c  interface.h  main.c  server.c  support.c  support.h  usefulstuff.c  usefulstuff.h  xdebug_hash.c  xdebug_hash.h  xdebug_llist.c  xdebug_llist.h  xdebug_private.h  xdebug_str.c  xdebug_xml.c  xdebug_xml.h  xdebug_xml_reader.c
src/xmlparser/: Makefile  xdebug_var.h  xdebug_xml.c  xdebug_xml_reader.c  xml_reader
